@@ -16,4 +16,4 @@
   </div>
 <% end %>
 
-<%= render :partial => "devise/shared/links" %>
+<%= render "links" %>
